--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -50,6 +50,10 @@ body {
     font-size: 14px;
     text-align: right;
 }
+.tx_attention {
+    margin-left: 8px;
+    color: #f00;
+}
 
 // Box
 .bx_todo_add {
